[tool.poetry]
name = "quantpiler"
version = "0.1.6"
description = "Quantum compiler and common circuits library"
license = "Apache-2.0"
authors = ["AveryanAlex <alex@averyan.ru>"]
readme = "README.md"
homepage = "https://github.com/averyanalex/quantpiler"
repository = "https://github.com/averyanalex/quantpiler"
documentation = "https://quantpiler.readthedocs.io/en/latest/"
keywords = ["qiskit", "quantum"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^0.37.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
black = "^22.6.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
