[tool.poetry]
name = "quantpiler-docs"
version = "0.1.6"
description = "Quantpiler's documentation"
license = "Apache-2.0"
authors = ["AveryanAlex <alex@averyan.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.1.1"
furo = "^2022.06.21"
nbsphinx = "^0.8.9"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
